<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.huangyiting.dreamtogether.ui.fragment.RiverOfWishFragment">
<!--心愿之河fragment布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/white">
            <ImageView
                android:id="@+id/rw_back_to_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_24"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/river_of_wish"
                android:textSize="20sp"/>
            </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@drawable/gray"></View>
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:background="@drawable/white"
            >
            <LinearLayout
                android:id="@+id/all_wishes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="3dp"
                    android:text="@string/all_wishes"/>
                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/gray"/>
                </LinearLayout>
            <LinearLayout
                android:id="@+id/my_wishes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="3dp"
                    android:text="@string/my_wishes"/>
                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/gray"/>
            </LinearLayout>
        </LinearLayout>
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/item_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
         <TextView
            android:id="@+id/all_wishes"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/all_wishes"
            android:gravity="center"/>
         <View
            android:id="@+id/tab_one"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/gray"
            />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/my_wishes"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:text="@string/my_wishes"
                android:gravity="center"/>
            <View
                android:id="@+id/tab_two"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/gray"
                />
        </LinearLayout>
        </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/rw_viewpager"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
      <!--  <android.support.v4.view.PagerTitleStrip
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            </android.support.v4.view.PagerTitleStrip>-->

        </android.support.v4.view.ViewPager>


    </LinearLayout>

</FrameLayout>
